# Dedalus-Converger-

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
converger/: apply.py  contract.py  model.py  observe.py  safety.py
docs/: ARCHITECTURE.md  DESIGN.md  plan.py
src/converger/: apply.py  contract.py  model.py  observe.py  plan.py  safety.py
src/converger/adapters/: __init__.py  base.py  registry.py
